Resolved issues in Pagination component (#154)
* Resolved issues in Pagination component

* Hide scrollbar

--- a/src/components/input/input.module.css
+++ b/src/components/input/input.module.css
@@ -126,6 +126,11 @@
   z-index: 100;
 }
 
+.reverseOpen {
+  bottom: 100%;
+  transform: none;
+}
+
 /* Scrollbar */
 .body::-webkit-scrollbar {
   width: 7px;
@@ -138,7 +143,7 @@
 
 /* Handle */
 .body::-webkit-scrollbar-thumb {
-  background: white;
+  background: transparent;
 }
 
 .dashboardLabel {
